Fixed inline-block alignment issue

--- a/tbx/core/static/torchbox/css/components/_involved.scss
+++ b/tbx/core/static/torchbox/css/components/_involved.scss
@@ -17,6 +17,7 @@
   border: none;
   padding: 0;
   margin: 0 auto;
+  font-size: 0;
   h3, p {
     color: white;
   }
