--- a/tbx/core/static/torchbox/css/components/_offices.scss
+++ b/tbx/core/static/torchbox/css/components/_offices.scss
@@ -14,6 +14,8 @@
     margin-bottom: 40px;
   }
   li {
+    font-size: 0;
+    
     @media #{$tablet} {
       width: 33.3%;
     }
